cmake_minimum_required(VERSION 3.0)

add_subdirectory(ZmqWrapper)
add_subdirectory(Gpio)
add_subdirectory(RaptorBase)
add_subdirectory(Env)
add_subdirectory(Camera)
add_subdirectory(Logger)
add_subdirectory(MasterConfig)
add_subdirectory(Image)
add_subdirectory(ApiClient)
add_subdirectory(InfoChat)
add_subdirectory(ShutdownGate)
