cmake_minimum_required(VERSION 3.0)

add_subdirectory(ProtobufTest)
add_subdirectory(ProtobufEnhTest)
add_subdirectory(PigpioTest)
add_subdirectory(GpioTest)
add_subdirectory(SerialGpioTest)
add_subdirectory(ZmqTest)
add_subdirectory(ZmqWrapperTest)
add_subdirectory(ProxyTest)
add_subdirectory(UtilsTest)
add_subdirectory(JsonTest)
add_subdirectory(FunctionTest)
add_subdirectory(HealthCheckTest)
add_subdirectory(HealthCheckMultiTest)
add_subdirectory(SerialTest)
add_subdirectory(CameraTest)
add_subdirectory(CameraLibTest)
add_subdirectory(LoggerTest)
add_subdirectory(CounterSubTest)
add_subdirectory(ImageTest)
add_subdirectory(PrintTest)
add_subdirectory(DateTimeTest)
add_subdirectory(MasterConfTest)
add_subdirectory(ApiTest)
add_subdirectory(ApiClientTest)
add_subdirectory(InfoChatTest)
add_subdirectory(StandbyWaitTest)
add_subdirectory(CpuMemoryCheckTest)
add_subdirectory(ZserverTest)
add_subdirectory(GpioServerTest)
add_subdirectory(ShutdownTest)
