project(Zserver)

add_executable(
    ${PROJECT_NAME}
    module/${PROJECT_NAME}.cpp
    module/Gateway.cpp
    module/Router.cpp
    controller/GpioController.cpp
    controller/CameraController.cpp
    runner/${PROJECT_NAME}Runner.cpp
)
target_include_directories(
    ${PROJECT_NAME}
    PRIVATE
)
target_link_libraries(
    ${PROJECT_NAME}
    PRIVATE
    pthread
    Gpio
    Camera
    ZmqWrapper
    MasterConfig
    protobuf-ZserverMsg
    ${OpenCV_LIBS}
)

#######################################
add_executable(
    Zclient
    module/${PROJECT_NAME}.cpp
    module/Gateway.cpp
    module/Router.cpp
    controller/GpioController.cpp
    controller/CameraController.cpp
    runner/ZclientRunner.cpp
)
target_include_directories(
    Zclient
    PRIVATE
)
target_link_libraries(
    Zclient
    PRIVATE
    pthread
    Gpio
    Camera
    ZmqWrapper
    protobuf-ZserverMsg
    ${OpenCV_LIBS}
)

INSTALL(
    TARGETS
    ${PROJECT_NAME}
    Zclient
    RUNTIME DESTINATION bin
)
